@@ -1,7 +1,7 @@
 //Do not apply this module with options, thus commented out.
 //Create seperate MM patches to override calculated values from code
 
-@PART[*]:FINAL
+@PART[*]
 {
 	%MODULE[HitpointTracker]
 	{
