@@ -1,105 +1,0 @@
-/////////////////////////////////////////////
-//Torpedo
-/////////////////////////////////////////////
-
-@PART[SpearFishBAEtorpedo]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[DallesqueTorp*]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[DallesqueMK48Torpedo]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[MK3ADT]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[MK3Torpedo]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[AutoTorpTest]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[ShipTorp1]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-@PART[DeepSixSubmunition*]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = torpedo
-	}
-}
-
-/////////////////////////////////////////////
-//Depth Charges
-/////////////////////////////////////////////
-
-@PART[DC2HomingDepthCharge]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = depthcharge
-	}
-}
-
-
-@PART[HedgehogASM]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = depthcharge
-	}
-}
-
-@PART[HBmine*]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = depthcharge
-	}
-}
-
-
-@PART[AirDropDepthCharge]:FINAL
-{
-	@MODULE[MissileLauncher]
-	{
-		%missileType = depthcharge
-	}
-}
